tests/integration/errors/undefined_variable.rsg
// TEST: compile_error
// EXPECT-ERROR: undefined variable 'x'

fn main() {
    y := x + 1
}
